# espeak-ng-android

./: .gitignore  README.md  README.zh-CN.md  build.gradle.kts  gradle.properties  settings.gradle.kts
Phoneme/espeak-ng/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
Phoneme/espeak-ng/src/androidTest/java/com/telenav/scoutivi/tts/espeak/: ExampleInstrumentedTest.kt
Phoneme/espeak-ng/src/main/: AndroidManifest.xml
Phoneme/espeak-ng/src/main/cpp/: CMakeLists.txt  espeak-jni.cpp  espeak_api.cpp  tashkeel_api.cpp  tashkeel_jni.cpp
Phoneme/espeak-ng/src/main/cpp/include/: espeak_api.h  tashkeel_api.h
Phoneme/espeak-ng/src/main/cpp/include/piper-phonemize/: tashkeel.hpp
Phoneme/espeak-ng/src/main/java/com/telenav/scoutivi/tts/espeak/: EspeakApi.kt  FileUtils.kt  TashkeelApi.kt
Phoneme/espeak-server/: build.gradle.kts
Phoneme/espeak-server/src/main/: AndroidManifest.xml
Phoneme/espeak-server/src/main/java/com/telenav/scoutivi/espeak/: AppSharedPreferenceManager.kt  EspeakNGApplication.kt  MainActivity.kt  PhonemeService.kt
Phoneme/espeak-server/src/main/res/layout/: activity_main.xml
Phoneme/espeak-server/src/main/res/values/: strings.xml
Phoneme/phoneme-aidl/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
Phoneme/phoneme-sdk/: build.gradle.kts
Phoneme/phoneme-sdk/src/androidTest/java/com/telenav/scoutivi/espeak/: ExampleInstrumentedTest.kt
Phoneme/phoneme-sdk/src/main/: AndroidManifest.xml
Phoneme/phoneme-sdk/src/main/java/com/telenav/scoutivi/phoneme/: PhonemeManager.java
Phoneme/phoneme-sdk/src/test/java/com/telenav/scoutivi/espeak/: ExampleUnitTest.kt
Speech/sample/: build.gradle.kts
Speech/sample/src/androidTest/java/com/telenav/scoutivi/tts/: ExampleInstrumentedTest.kt
Speech/sample/src/main/: AndroidManifest.xml
Speech/sample/src/main/res/layout/: activity_main.xml
Speech/sample/src/main/res/values/: strings.xml  themes.xml
Speech/sample/src/test/java/com/telenav/scoutivi/tts/: ExampleUnitTest.kt
Speech/speech-service/: build.gradle.kts
Speech/speech-service/src/main/: AndroidManifest.xml
Speech/speech-service/src/main/java/com/telenav/scoutivi/speech/: TelenavTTSService.java
Speech/speech-service/src/main/res/values/: strings.xml  themes.xml
Speech/speech-service/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
